# CodeIT-Internship

./: .gitignore  Assignment1.ipynb  General_In_lecture.ipynb  LinearRegressionTask.ipynb  Task1.ipynb  commands.txt  pyproject.toml  setup.py
src/operations/: __init__.py  fractions.py  strings.py
